--- a/rtdata/themes/size.css
+++ b/rtdata/themes/size.css
@@ -238,7 +238,7 @@ window.csd:not(.fullscreen) #MainNotebook > header.top {
     min-width: 0;
     padding: 0;
 }
-#FileBrowserQueryToolbar {
+#FileBrowserQueryToolbar > viewport > box {
     margin: 0 0 0.416666666666666666em 0;
     min-height: 0;
     min-width: 0;
